.[1.14.0] - UNRELEASED
[%collapsible]
====
[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/pull/176[#176] [core] Update dictionary files, including:
** Data and functions in existing data providers
** Updates to existing localized dictionaries

* https://github.com/serpro69/kotlin-faker/pull/179[#179] [core] Add parameter info context to user defined generators

++++
<details><summary><h3>New Data Providers</h3></summary>
<p>
++++
* `airport`
* `cowboy_bebop`
* `spongebob`
++++
</p>
</details>
++++

[discrete]
=== Changed

* ...

[discrete]
=== Fixed

* ...

[discrete]
=== Other

* https://github.com/serpro69/kotlin-faker/pull/181[#181] [core] Add context to exception when `randomClassInstance` fails

====

.[1.13.0] - 2022-12-18
[%collapsible]
====
[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/pull/164[#164] Add possibility to configure `RandomClassProvider` on higher levels
* https://github.com/serpro69/kotlin-faker/pull/165[#165] Add `copy` and `new` functions to `RandomClassProvider`

[discrete]
=== Changed

* https://github.com/serpro69/kotlin-faker/pull/159[#159] Change format of dictionary files from yml to json

[discrete]
=== Fixed

* https://github.com/serpro69/kotlin-faker/pull/161[#161] Fix empty lists as parameter values
* https://github.com/serpro69/kotlin-faker/pull/171[#171] Fix locale fallback
* https://github.com/serpro69/kotlin-faker/pull/173[#173] Fix phoneNumber generation for `en-US` locale

[discrete]
=== Other

* https://github.com/serpro69/kotlin-faker/pull/168[#168] Reduce faker's shadowed jar size

====

.[1.12.0] - 2022-10-16
[%collapsible]
====
[discrete]
=== Added

* https://github.com/serpro69/kotlin-faker/pull/134[#134] Overload `RandomService#randomSublist` and `RandomService#randomSubset` with `sizeRange` parameter
* https://github.com/serpro69/kotlin-faker/pull/144[#144] Add index and punctuation chars support to `RandomService#randomString`