@@ -32,6 +32,7 @@ class IntrospectorTest : DescribeSpec() {
                         "AquaTeenHungerForce",
                         "Artist",
                         "Australia",
+                        "Avatar",
                         "BackToTheFuture",
                         "Bank",
                         "Barcode",
@@ -51,6 +52,7 @@ class IntrospectorTest : DescribeSpec() {
                         "Camera",
                         "Cannabis",
                         "Cat",
+                        "Chess",
                         "Chiquito",
                         "ChuckNorris",
                         "ClashOfClans",
@@ -248,6 +250,7 @@ class IntrospectorTest : DescribeSpec() {
                         "aquaTeenHungerForce",
                         "artist",
                         "australia",
+                        "avatar",
                         "backToTheFuture",
                         "bank",
                         "barcode",
@@ -267,6 +270,7 @@ class IntrospectorTest : DescribeSpec() {
                         "camera",
                         "cannabis",
                         "cat",
+                        "chess",
                         "chiquito",
                         "chuckNorris",
                         "clashOfClans",
