@@ -21,6 +21,7 @@ internal enum class YamlCategory : Category {
     AQUA_TEEN_HUNGER_FORCE,
     ARTIST,
     AUSTRALIA,
+    AVATAR,
     BACK_TO_THE_FUTURE,
     BANK,
     BARCODE,
@@ -40,6 +41,7 @@ internal enum class YamlCategory : Category {
     CAMERA,
     CANNABIS,
     CELL_PHONE,
+    CHESS,
     CHIQUITO,
     CHUCK_NORRIS,
     CODE,
