@@ -4,8 +4,9 @@
 [discrete]
 === Added
 
-* https://github.com/serpro69/kotlin-faker/pull/176[#176] [core] Update dictionary files, including:
+* https://github.com/serpro69/kotlin-faker/pull/176[#176], https://github.com/serpro69/kotlin-faker/pull/182[#182], https://github.com/serpro69/kotlin-faker/pull/183[#183], [core] Update dictionary files, including:
 ** Data and functions in existing data providers
+*** `Faker().food.allergens()`
 ** Updates to existing localized dictionaries
 
 * https://github.com/serpro69/kotlin-faker/pull/179[#179] [core] Add parameter info context to user defined generators
@@ -15,6 +16,8 @@
 <p>
 ++++
 * `airport`
+* `avatar`
+* `chess`
 * `cowboy_bebop`
 * `spongebob`
 ++++
